--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ sup {
 
 </head>
 <body>
-<h1>Data Visualization</h1>
+<h1>Syllabus for Data Visualization</h1>
 
 <pre><code>Spring 2015 | QMSS G4063 | MW 1:10pm-2:25pm | 424 Pupin Laboratories  
 Quantitative Methods in the Social Sciences (QMSS)  
