add Anscombe's quartet from today's lecture and update Assignment link in R-Tutorial

--- a/r/R-tutorial.html
+++ b/r/R-tutorial.html
@@ -550,7 +550,7 @@ load(&quot;temperature_data.Rdata&quot;)</code></pre>
 <p>The Nigerian Government has committed $1.2 billion USD to achieving the United Nations Millennium Development Goals. Matching grants are given to Local Government Areas (LGAs) for approved projects and programmes geared towards reducing poverty and improving education and health. To promote the use of data in the local planning process, a rigorous, geo-referenced, baseline facility inventory was conducted for the entire country. The objective was to collect data for all of Nigeria’s health, education and water facilities. The result is this online portal, the <a href="http://nmis.mdgs.gov.ng/about">Nigeria MDG Information System</a> (NMIS).</p>
 <p>Using this rich dataset, we will assess a few key development statistics, previously unknowable.</p>
 <ol style="list-style-type: decimal">
-<li>Go to this <a href="http://bit.ly/1fj3sjD">link</a> to retrieve general metadata for Local Government Areas (LGAs) of Nigeria. LGAs are akin to counties in the U.S.</li>
+<li>Go to this <a href="https://github.com/Ecohen4/data-viz/blob/master/r/lgas.csv">link</a> to retrieve general metadata for Local Government Areas (LGAs) of Nigeria. LGAs are akin to counties in the U.S.</li>
 <li>Next, download the full <a href="http://nmis.mdgs.gov.ng/download">NMIS dataset</a>, and grab the [large] .csv file called “Health_Mopup_and_Baseline_NMIS_Facility.csv”. This contains every health facility in Nigeria.</li>
 <li>Produce a new <code>data.frame</code> with the following properties:
 <ul>
