syllabus update on gh-pages

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ blockquote {
 }
 body {
     font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
+    font-size: 12px;
+    line-height: 16px;
     color: #737373;
     background-color: white;
-    margin: 10px 13px 10px 13px;
+    margin: 10px 10px 10px 10px;
 }
 table {
 	margin: 10px 0 15px 0;
@@ -156,7 +156,7 @@ sup {
 
 </head>
 <body>
-<h1>Syllabus for Data Visualization</h1>
+<h1>Data Visualization</h1>
 
 <pre><code>Spring 2015 | QMSS G4063 | MW 1:10pm-2:25pm | 424 Pupin Laboratories  
 Quantitative Methods in the Social Sciences (QMSS)  
@@ -230,6 +230,7 @@ Students will have the opportunity to work in small teams to create data visuali
 <li>Data analysis with <code>plyr</code></li>
 <li>Data visualization with <code>ggplot</code></li>
 <li>Scripting, debugging and writing functions</li>
+<li>Reproducible research and dynamic output with <a href="http://rmarkdown.rstudio.com/RMarkdownReferenceGuide.pdf">Rmarkdown</a></li>
 </ul>
 </li>
 <li>Communicating &amp; sharing your results in the browser
