--- a/r/R-tutorial.html
+++ b/r/R-tutorial.html
@@ -161,7 +161,7 @@ source(&quot;multiplot.R&quot;)</code></pre>
 <pre class="r"><code>getwd()</code></pre>
 <pre><code>## [1] &quot;/Users/elliotcohen/github/data-viz/r&quot;</code></pre>
 <p>Set the working directory</p>
-<pre><code>setwd(&quot;~/github/qmssviz-FORK/labs/tutorial/_posts/&quot;)</code></pre>
+<pre><code>setwd(&quot;~/github/data-viz/r&quot;)</code></pre>
 </div>
 <div id="libraries" class="section level2">
 <h2><span class="header-section-number">1.3</span> Libraries</h2>
@@ -279,8 +279,24 @@ names(stns) &lt;- c(&quot;WMONo&quot;, &quot;Stn.name&quot;, &quot;Lat&quot;, &q
 <pre><code>## [1] &quot;factor&quot;</code></pre>
 <pre class="r"><code>class(data$Temp)</code></pre>
 <pre><code>## [1] &quot;numeric&quot;</code></pre>
-<p>The core class definitions in R include: 1. numeric<br /> 2. integer<br /> 3. complex<br /> 4. character<br /> 5. logical<br /> 6. list<br /> 7. raw<br /> 6. expression<br /> 8. factor<br /> - factor is a generic data type used as an alternative to any of the above. Useful when keeping track of a limited set of recurring values within a vector of a <code>data.frame</code>.<br /> - Beware of challenges with factor =&gt; integer/numeric conversions.<br /> - For additional information on working with factors in your data: <a href="http://www.statmethods.net/input/datatypes.html">More information on Factors</a></p>
-<p>A note: <code>NA</code> (<em>Not Available</em>) is a internal value in R, and can be of any type. <code>NA</code> indicates a missing value. More on this later.</p>
+<p>The core class definitions in R include:</p>
+<ol style="list-style-type: decimal">
+<li>numeric<br /></li>
+<li>integer<br /></li>
+<li>complex<br /></li>
+<li>character<br /></li>
+<li>logical<br /></li>
+<li>list<br /></li>
+<li>raw<br /></li>
+<li>expression<br /></li>
+<li>factor
+<ul>
+<li>factor is a generic data type used as an alternative to any of the above. Useful when keeping track of a limited set of recurring values within a vector of a <code>data.frame</code>.<br /></li>
+<li>Beware of factor! Handy for character strings and categorical variables, but integer/numeric conversions may produce unexpected results.</li>
+<li>For additional information on working with factors in your data: <a href="http://www.statmethods.net/input/datatypes.html">More information on Factors</a></li>
+</ul></li>
+</ol>
+<p><strong>Note</strong>: <code>NA</code> (<em>Not Available</em>) is a internal value, and can be of any type. <code>NA</code> indicates a missing value. More on this later.</p>
 <p>Before proceeding, let’s delve more into dataframes, as they are a central concept in R.</p>
 </div>
 <div id="data-frames" class="section level2">
