--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@ Columbia University
 
 <h2>Instructor</h2>
 
-<p>Elliot Cohen, Ph.D.<br/>
-<a href="http://qmss.columbia.edu/faculty-and-staff/">QMSS</a> | <a href="http://www.earth.columbia.edu/articles/view/58">Earth Institute</a> | <a href="http://sel.columbia.edu/about/">Sustainable Engineering Lab</a><br/>
-elliot.cohen@columbia.edu |
-212.854.7993 | Mudd 134F</p>
+<p><code>Elliot Cohen, Ph.D.</code><br/>
+<strong>affiliation</strong>  <a href="http://qmss.columbia.edu/faculty-and-staff/">QMSS</a> | <a href="http://www.earth.columbia.edu/articles/view/58">Earth Institute</a> | <a href="http://sel.columbia.edu/about/">Sustainable Engineering Lab</a><br/>
+<strong>contact</strong>  elliot.cohen@columbia.edu | 212.854.7993<br/>
+<strong>office hours</strong>  Wednesdays 2:30-3:30pm IAB 270C</p>
 
 <h2>Course Description</h2>
 
