update website to reflect updated README

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ blockquote {
 }
 body {
     font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 10px;
+    line-height: 15px;
     color: #737373;
     background-color: white;
-    margin: 10px 10px 10px 10px;
+    margin: 6px 9px 6px 9px;
 }
 table {
 	margin: 10px 0 15px 0;
@@ -58,23 +58,23 @@ h6 {
     line-height: 36px;
 }
 h1 {
-    margin-bottom: 18px;
-    font-size: 30px;
+    margin-bottom: 15px;
+    font-size: 26px;
 }
 h2 {
-    font-size: 24px;
+    font-size: 20px;
 }
 h3 {
-    font-size: 18px;
-}
-h4 {
     font-size: 16px;
 }
-h5 {
+h4 {
     font-size: 14px;
 }
-h6 {
+h5 {
     font-size: 13px;
+}
+h6 {
+    font-size: 12px;
 }
 hr {
     margin: 0 0 19px;
@@ -82,22 +82,22 @@ hr {
     border-bottom: 1px solid #ccc;
 }
 blockquote {
-    padding: 13px 13px 21px 15px;
-    margin-bottom: 18px;
+    padding: 9px 9px 9px 9px;
+    margin-bottom: 9px;
     font-family:georgia,serif;
     font-style: italic;
 }
 blockquote:before {
     content:"\201C";
-    font-size:40px;
+    font-size:30px;
     margin-left:-10px;
     font-family:georgia,serif;
     color:#eee;
 }
 blockquote p {
-    font-size: 14px;
+    font-size: 11px;
     font-weight: 300;
-    line-height: 18px;
+    line-height: 15px;
     margin-bottom: 0;
     font-style: italic;
 }
@@ -153,23 +153,27 @@ sup {
 }
 </style>
 <title>Data Visualization</title>
-
+<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax:{inlineMath:[['$$$','$$$']]}});</script><script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 <h1>Data Visualization</h1>
 
-<pre><code>Spring 2015 | QMSS G4063 | MW 1:10pm-2:25pm | 424 Pupin Laboratories  
-Quantitative Methods in the Social Sciences (QMSS)  
-Graduate School of Arts and Sciences (GSAS) 
+<pre><code>Quantitative Methods in the Social Sciences (QMSS)  
+Graduate School of Arts and Sciences (GSAS)  
 Columbia University
 </code></pre>
 
+<h2>Course Details</h2>
+
+<p>Course: QMSS G4063 Spring 2015<br/>
+Lecture: MW 1:10pm-2:25pm at 313 Fayerweather<br/>
+Office Hours: W 2:30pm-3:30pm at IAB 270C</p>
+
 <h2>Instructor</h2>
 
-<p><code>Elliot Cohen, Ph.D.</code><br/>
-<strong>affiliation</strong>  <a href="http://qmss.columbia.edu/faculty-and-staff/">QMSS</a> | <a href="http://www.earth.columbia.edu/articles/view/58">Earth Institute</a> | <a href="http://sel.columbia.edu/about/">Sustainable Engineering Lab</a><br/>
-<strong>contact</strong>  elliot.cohen@columbia.edu | 212.854.7993<br/>
-<strong>office hours</strong>  Wednesdays 2:30-3:30pm IAB 270C</p>
+<p>Elliot Cohen, Ph.D.<br/>
+Lecturer in the Department of Statistics<br/>
+Columbia University</p>
 
 <h2>Course Description</h2>
 
@@ -265,7 +269,7 @@ Students will have the opportunity to work in small teams to create data visuali
 <li>Create a <a href="https://github.com/">github</a> account if you don't already have one</li>
 <li><p>Fork the class repo. Your assignments will be submitted as pull requests!</p>
 
-<pre><code>  git clone https://github.com/YOUR-NAME/qmssviz.git
+<pre><code>  git clone https://github.com/YOUR-NAME/data-viz.git
   cd data-viz
   git remote add upstream https://github.com/ecohen4/data-viz.git
 </code></pre></li>
