--- a/d3/arrays.html
+++ b/d3/arrays.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>JavaScript data structures</title>
-    <link rel="stylesheet" type="text/css" href="../../css/styles.css"/>
-    <script type="text/javascript" src="../../lib/d3.js"></script>
+    <link rel="stylesheet" type="text/css" href="../d3-cookbook/css/styles.css"/>
+    <script type="text/javascript" src="../d3-cookbook/lib/d3.js"></script>
 </head>
 
 <body>
