--- a/hw3/2015-04-08-HannahFresques-hw3.html
+++ b/hw3/2015-04-08-HannahFresques-hw3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Basic Axes</title>
+    <title>Test Test</title>
     <script type="text/javascript" src="lib/d3.js"></script>
     <style type="text/css">
 
@@ -13,18 +13,26 @@
         shape-rendering: crispEdges;
       }
 
+      .axis text {
+        font-size: 11px;
+      }
+
     </style>
 </head>
 
 <body>
 
+<p> Hannah's great scatterplot </p>
+
 
 <script type="text/javascript">
     // define variables used throughout
-    var height = 100,
-        width = 500,
-        margin = 25,
+    var height = 433,
+        width = 700,
+        margin = 50,
         axisWidth = width - 2 * margin,
+        xmax = 1000,
+        ymax = 618,
         svg;
 
 
@@ -32,10 +40,11 @@
     //generate random dataset
     var dataset = [];
     var numDataPoints = 25;
-    var xmax = 1000
     for (var i = 0; i < numDataPoints; i++) {
       var newNumber1 = Math.floor(Math.random() * xmax);
-      dataset.push([newNumber1]);
+      var newNumber2 = Math.floor(Math.random() * ymax);
+      var newNumber3 = Math.floor(Math.random() * 3);
+      dataset.push([newNumber1, newNumber2, newNumber3]);
     }
 
     // define scales
@@ -45,6 +54,11 @@
                          .nice()
                          ;
 
+     var yScale = d3.scale.linear()
+                          .domain([0, ymax])
+                          .range([height-margin, margin])
+                          .nice()
+                          ;
      // create svg
      svg = d3.select("body").append("svg")
         .attr("width", width)
@@ -56,6 +70,11 @@
         .orient("bottom")
         .ticks(5);
 
+    var yAxis = d3.svg.axis()
+        .scale(yScale)
+        .orient("left")
+        .ticks(5);
+
     // render data
       svg.selectAll("circle")
          .data(dataset)
@@ -64,7 +83,9 @@
          .attr("cx", function(d) {
                       return xScale(d[0]);
                     })
-         .attr("cy", height-2*margin)
+         .attr("cy", function(d) {
+                      return yScale(d[1]);
+                    })
          .attr("r", 3)
          ;
 
@@ -75,6 +96,10 @@
         .attr("transform", "translate(" + 0 + "," + (height-margin) + ")")
         .call(xAxis);
 
+    svg.append("g")
+        .attr("class", "axis")
+        .attr("transform", "translate(" + margin + "," + 0 + ")")
+        .call(yAxis);
 
 </script>
 
