--- a/hw3/2015-04-08-HannahFresques-hw3.html
+++ b/hw3/2015-04-08-HannahFresques-hw3.html
@@ -14,15 +14,21 @@
       }
 
       .axis text {
-        font-size: 11px;
+        font-size: 12px;
       }
 
     </style>
 </head>
 
+<h1>
+  Hannah's great scatterplot
+</h1>
+
 <body>
 
-<p> Hannah's great scatterplot </p>
+  <p>
+    Monkey tail length by cuteness
+  </p>
 
 
 <script type="text/javascript">
@@ -43,9 +49,14 @@
     for (var i = 0; i < numDataPoints; i++) {
       var newNumber1 = Math.floor(Math.random() * xmax);
       var newNumber2 = Math.floor(Math.random() * ymax);
+      // z variable is like a classification (0,1,2)
       var newNumber3 = Math.floor(Math.random() * 3);
       dataset.push([newNumber1, newNumber2, newNumber3]);
     }
+
+    //define array to store colors.
+    // scheme taken from colorbrewer
+    var colors = ['rgb(141,211,199)','rgb(255,255,179)','rgb(190,186,218)']
 
     // define scales
     var xScale = d3.scale.linear()
@@ -76,18 +87,24 @@
         .ticks(5);
 
     // render data
-      svg.selectAll("circle")
-         .data(dataset)
-         .enter()
-         .append("circle")
-         .attr("cx", function(d) {
-                      return xScale(d[0]);
-                    })
-         .attr("cy", function(d) {
-                      return yScale(d[1]);
-                    })
-         .attr("r", 3)
-         ;
+    svg.selectAll("circle")
+       .data(dataset)
+       .enter()
+       .append("circle")
+       .attr("cx", function(d) {
+                    return xScale(d[0]);
+                  })
+       .attr("cy", function(d) {
+                    return yScale(d[1]);
+                  })
+       .attr("r", 5)
+       .attr("fill", function(d) {
+                    if      (d[2] == 0) return colors[0] ;
+                    else if (d[2] == 1) return colors[1] ;
+                    else if (d[2] == 2) return colors[2] ;
+                    else                return "rgb(0,0,0)" ;
+                  })
+       ;
 
 
     // render axis
@@ -102,6 +119,15 @@
         .call(yAxis);
 
 </script>
+
+<!--create a legend.-->
+<!--I'm sure there's a better way to do this, but this will be good practice anyway.-->
+<p>
+  <b>Legend</b>
+  <div style="color: rgb(141,211,199)">Baboon</div>
+  <div style="color: rgb(255,255,179)">Golden Lion Tamarin</div>
+  <div style="color: rgb(190,186,218)">Gibbon</div>
+</p>
 
 </body>
 
