--- a/Yue-Guo-hw3_yg2405.html
+++ b/Yue-Guo-hw3_yg2405.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>testD3-3-drawingDivBar</title>
+<title> Try bar-chart </title>
 <link rel="stylesheet" type="text/css" href="../../css/styles.css"/>
 <script type="text/javascript" src="../../lib/d3.js"></script>
 </head>
