updates from today's class

--- a/hw4/2015-04-07-YidingLyu-HW4.html
+++ b/hw4/2015-04-07-YidingLyu-HW4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Lines</title>
-    <link rel="stylesheet" type="text/css" href="../../css/styles.css"/>
-    <script type="text/javascript" src="../../lib/d3.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <script type="text/javascript" src="d3.js"></script>
 </head>
 
 <body>
