--- a/hw4/canvas.html
+++ b/hw4/canvas.html
@@ -29,14 +29,7 @@
 		                value="Update Color" 
 		                onclick="updateColor();"/>
 		</div>
-		
-		<div id="option">
-		    <input name="altData" 
-		                 type="button" 
-		                value="Alternate Data" 
-		                onclick="alternateData()"/>
-		</div>
-		
+
 		<script type = "text/javascript">
 		
 		var dat;
@@ -45,8 +38,9 @@
 			dat = d3.range(num).map(function() {
 				return {
 					x: Math.random() * 100,
-					y: Math.random() * 100
-					}
+					y: Math.random() * 100,
+					r: Math.random() * 10,
+				}
 				});
 		};
 		
@@ -61,6 +55,9 @@
 			ymax = d3.max(dat, function (d) {
 				return d.y;
 			}),
+			rmax = d3.max(dat, function (d) {
+				return d.r;
+			}),
 			svg = d3.select("body")
 				.append("svg")
 				.attr("width", w)
@@ -71,12 +68,24 @@
 			yScale = d3.scale.linear()
 				.domain([0, ymax])
 				.range([h - margin, margin]),
+			rScale = d3.scale.linear()
+				.domain([0, rmax])
+				.range([0, rmax]),
 			xAxis = d3.svg.axis()
 				.scale(xScale)
 				.orient("bottom"),
 			yAxis = d3.svg.axis()
 				.scale(yScale)
-				.orient("left");
+				.orient("left"),
+			xcol = d3.scale.linear()
+				.domain([0, xmax])
+				.range([0, 255]),
+			ycol = d3.scale.linear()
+				.domain([0, ymax])
+				.range([0, 255]),
+			rcol = d3.scale.linear()
+				.domain([0, rmax])
+				.range([0, 255]);
 			
 		function renderAxis() {			
 			svg.append("g")
@@ -113,7 +122,9 @@
 				.attr("cy", function (d) {
 					return yScale(d.y);
 				})
-				.attr("r", 3);	
+				.attr("r", function (d) {
+					return rScale(d.r);
+				});
 		}
 		
 		function removeData() {
@@ -124,10 +135,9 @@
 		
 		function updateColor() {
 			svg.selectAll("circle")
-				.style("fill", "gold")
 				.transition()
 				.duration(1000)
-				.style("fill", "black");
+				.style("fill", function(d) { return "rgb(" + Math.round(xcol(d.x)) + "," + Math.round(ycol(d.y)) + "," + Math.round(rcol(d.r)) + ")"; });
 		}
 		
 		
