--- a/hw4/canvas.html
+++ b/hw4/canvas.html
@@ -164,7 +164,9 @@
 				})
 				.attr("r", function (d) {
 					return rScale(d.r);
-				});
+				})
+				.on("click", function(d) { console.log(d);
+				});;
 		}
 		
 		function updateWithNewData() {
@@ -182,7 +184,9 @@
 				})
 				.attr("r", function (d) {
 					return rScale(d.r);
-				});
+				})
+				.on("click", function(d) { console.log(d);
+				});;
 		}
 		
 		function removeData() {
