--- a/04-09-2015-Lin Xu-Assignment3.html
+++ b/04-09-2015-Lin Xu-Assignment3.html
@@ -32,9 +32,6 @@
     var yScale = d3.scale.linear()
             .domain([0, 200])
             .range([h - padding, padding]);
-    var rScale = d3.scale.linear()
-            .domain([0, d3.max(dataset, function(d) { return d[1]; })])
-            .range([5, 15])
 
     //Create SVG element
     var chart = d3.select("body")
@@ -52,7 +49,7 @@
                 return yScale(d[1]);
             })
             .attr("r", function(d) {
-                 return yScale(r[1]);
+                return 5;
             });
     //Define x axis
     var xAxis = d3.svg.axis()
