bring in Denis Tan hw4

--- a/hw4/2015-Apr-7-DenisTan-Assignment4.html
+++ b/hw4/2015-Apr-7-DenisTan-Assignment4.html
@@ -117,6 +117,8 @@
 		
 		function updateColor() {
 			svg.selectAll("circle")
+				.transition()
+				.duration(1000)
 				.style("fill", "gold");
 		}
 		
