--- a/hw/2015-04-13-YiqianJin-HW4.html
+++ b/hw/2015-04-13-YiqianJin-HW4.html
@@ -34,6 +34,10 @@
 
 <body>
 
+<p> Click here to get new data with new scale! Just try!
+</p>
+    <br />
+    <br />
 
 <div class="control-group">
     <button onclick="newData()">
@@ -63,7 +67,7 @@
         xScale,
         yScale,
         rScale,
-        dataset;
+        dataset; // global var.
         numData = 30;
 
     function genData(){
