--- a/hw4/canvas.html
+++ b/hw4/canvas.html
@@ -68,7 +68,12 @@
 			svg = d3.select("body")
 				.append("svg")
 				.attr("width", w)
-				.attr("height", h),
+				.attr("height", h)
+				.call( // <-A
+					d3.behavior.zoom() // <-B
+			        	.scaleExtent([1, 10]) // <-C
+			        	.on("zoom", zoom) // <-D
+			    ),
 			xScale = d3.scale.linear()
 				.domain([0, xmax])
 				.range([margin, w - margin]),
@@ -93,6 +98,12 @@
 			rcol = d3.scale.linear()
 				.domain([0, rmax])
 				.range([0, 255]);
+			
+		function zoom() {
+			svg.attr("transform", "translate(" 
+				+ d3.event.translate 
+				+ ")scale(" + d3.event.scale + ")");
+		}
 			
 		function renderAxis() {			
 			svg.append("g")
@@ -164,9 +175,7 @@
 				})
 				.attr("r", function (d) {
 					return rScale(d.r);
-				})
-				.on("click", function(d) { console.log(d);
-				});;
+				});
 		}
 		
 		function updateWithNewData() {
@@ -184,9 +193,7 @@
 				})
 				.attr("r", function (d) {
 					return rScale(d.r);
-				})
-				.on("click", function(d) { console.log(d);
-				});;
+				});
 		}
 		
 		function removeData() {
